Cwift/Antlr/CwiftParser.swift
// Generated from Cwift.g4 by ANTLR 4.7.1
import Antlr4

open class CwiftParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = CwiftParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(CwiftParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, T__0 = 1, T__1 = 2, True = 3, False = 4, Colon = 5, Assign = 6, 
                 Arrow = 7, SemiColon = 8, Multiplication = 9, Division = 10, 
                 Remainder = 11, Addition = 12, Subtraction = 13, MoreOrEqual = 14, 
                 LessOrEqual = 15, More = 16, Less = 17, Equal = 18, NotEqual = 19, 
                 BitwiseAnd = 20, BitwiseXor = 21, BitwiseOr = 22, LogicalAnd = 23, 
                 LogicalOr = 24, Variable = 25, Constant = 26, Int = 27, 
                 Double = 28, Comma = 29, Question = 30, Bool = 31, Nil = 32, 
                 PrefixOperator = 33, IntegerLiteral = 34, NumberSequence = 35, 
                 NonzeroDigit = 36, Digit = 37, If = 38, Else = 39, While = 40, 
                 LeftParen = 41, RightParen = 42, LeftBrace = 43, RightBrace = 44, 
                 FloatingSequence = 45, DoubleLiteral = 46, Identifier = 47, 
                 WS = 48, BlockComment = 49, LineComment = 50
	}

	public
	static let RULE_statements = 0, RULE_statement = 1, RULE_returnStatement = 2, 
            RULE_branchStatement = 3, RULE_ifStatement = 4, RULE_ifExpression = 5, 
            RULE_elseIfExpression = 6, RULE_elseExpression = 7, RULE_loopStatement = 8, 
            RULE_codeBlock = 9, RULE_expression = 10, RULE_assignmentExpression = 11, 
            RULE_conditionalExpression = 12, RULE_logicalOrExpression = 13, 
            RULE_logicalAndExpression = 14, RULE_bitwiseOrExpression = 15, 
            RULE_bitwiseXorExpression = 16, RULE_bitwiseAndExpression = 17, 
            RULE_equalityExpression = 18, RULE_relationalExpression = 19, 
            RULE_additiveExpression = 20, RULE_multiplicativeExpression = 21, 
            RULE_conditionalOperator = 22, RULE_conditionalAlternativeOperator = 23, 
            RULE_assignmentOperator = 24, RULE_expressionOperator = 25, 
            RULE_unaryExpression = 26, RULE_postfixExpression = 27, RULE_functionCallExpression = 28, 
            RULE_functionCallArgumentClause = 29, RULE_functionCallArgumentList = 30, 
            RULE_functionDeclaration = 31, RULE_parameterClause = 32, RULE_parameterList = 33, 
            RULE_parameter = 34, RULE_returnSignature = 35, RULE_externalParameterName = 36, 
            RULE_localParameterName = 37, RULE_functionCallArgument = 38, 
            RULE_primaryExpression = 39, RULE_literalExpression = 40, RULE_literal = 41, 
            RULE_declaration = 42, RULE_variableDeclaration = 43, RULE_constantDeclaration = 44, 
            RULE_initializer = 45, RULE_declarator = 46, RULE_typeStatement = 47, 
            RULE_primitiveTypeStatement = 48, RULE_typeDeclarator = 49, 
            RULE_primitiveTypeDeclarator = 50, RULE_typeName = 51, RULE_booleanLiteral = 52

	public
	static let ruleNames: [String] = [
		"statements", "statement", "returnStatement", "branchStatement", "ifStatement", 
		"ifExpression", "elseIfExpression", "elseExpression", "loopStatement", 
		"codeBlock", "expression", "assignmentExpression", "conditionalExpression", 
		"logicalOrExpression", "logicalAndExpression", "bitwiseOrExpression", 
		"bitwiseXorExpression", "bitwiseAndExpression", "equalityExpression", 
		"relationalExpression", "additiveExpression", "multiplicativeExpression", 
		"conditionalOperator", "conditionalAlternativeOperator", "assignmentOperator", 
		"expressionOperator", "unaryExpression", "postfixExpression", "functionCallExpression", 
		"functionCallArgumentClause", "functionCallArgumentList", "functionDeclaration", 
		"parameterClause", "parameterList", "parameter", "returnSignature", "externalParameterName", 
		"localParameterName", "functionCallArgument", "primaryExpression", "literalExpression", 
		"literal", "declaration", "variableDeclaration", "constantDeclaration", 
		"initializer", "declarator", "typeStatement", "primitiveTypeStatement", 
		"typeDeclarator", "primitiveTypeDeclarator", "typeName", "booleanLiteral"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'return'", "'func'", "'true'", "'false'", "':'", "'='", "'->'", 
		"';'", "'*'", "'/'", "'%'", "'+'", "'-'", "'>='", "'<='", "'>'", "'<'", 
		"'=='", "'!='", "'&'", "'^'", "'|'", "'&&'", "'||'", "'var'", "'let'", 
		"'Int'", "'Double'", "','", "'?'", "'Bool'", "'nil'", nil, nil, nil, nil, 
		nil, "'if'", "'else'", "'while'", "'('", "')'", "'{'", "'}'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, nil, nil, "True", "False", "Colon", "Assign", "Arrow", "SemiColon", 
		"Multiplication", "Division", "Remainder", "Addition", "Subtraction", 
		"MoreOrEqual", "LessOrEqual", "More", "Less", "Equal", "NotEqual", "BitwiseAnd", 
		"BitwiseXor", "BitwiseOr", "LogicalAnd", "LogicalOr", "Variable", "Constant", 
		"Int", "Double", "Comma", "Question", "Bool", "Nil", "PrefixOperator", 
		"IntegerLiteral", "NumberSequence", "NonzeroDigit", "Digit", "If", "Else", 
		"While", "LeftParen", "RightParen", "LeftBrace", "RightBrace", "FloatingSequence", 
		"DoubleLiteral", "Identifier", "WS", "BlockComment", "LineComment"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "Cwift.g4" }

	override open
	func getRuleNames() -> [String] { return CwiftParser.ruleNames }

	override open
	func getSerializedATN() -> String { return CwiftParser._serializedATN }

	override open
	func getATN() -> ATN { return CwiftParser._ATN }

	override open
	func getVocabulary() -> Vocabulary {
	    return CwiftParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,CwiftParser._ATN,CwiftParser._decisionToDFA, CwiftParser._sharedContextCache)
	}

	public class StatementsContext: ParserRuleContext {
			open
			func statement() -> [StatementContext] {
				return getRuleContexts(StatementContext.self)
			}
			open
			func statement(_ i: Int) -> StatementContext? {
				return getRuleContext(StatementContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return CwiftParser.RULE_statements
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.enterStatements(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.exitStatements(self)
			}
		}
	}
	@discardableResult
	 open func statements() throws -> StatementsContext {
		var _localctx: StatementsContext = StatementsContext(_ctx, getState())
		try enterRule(_localctx, 0, CwiftParser.RULE_statements)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(107) 
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	repeat {
		 		setState(106)
		 		try statement()


		 		setState(109); 
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	} while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = {  () -> Bool in
		 	   let testArray: [Int] = [_la, CwiftParser.Tokens.T__0.rawValue,CwiftParser.Tokens.T__1.rawValue,CwiftParser.Tokens.True.rawValue,CwiftParser.Tokens.False.rawValue,CwiftParser.Tokens.Variable.rawValue,CwiftParser.Tokens.Constant.rawValue,CwiftParser.Tokens.Nil.rawValue,CwiftParser.Tokens.IntegerLiteral.rawValue,CwiftParser.Tokens.If.rawValue,CwiftParser.Tokens.While.rawValue,CwiftParser.Tokens.LeftParen.rawValue,CwiftParser.Tokens.DoubleLiteral.rawValue,CwiftParser.Tokens.Identifier.rawValue]
		 	    return  Utils.testBitLeftShiftArray(testArray, 0)
		 	}()
		 	      return testSet
		 	 }())

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class StatementContext: ParserRuleContext {
			open
			func declaration() -> DeclarationContext? {
				return getRuleContext(DeclarationContext.self, 0)
			}
			open
			func loopStatement() -> LoopStatementContext? {
				return getRuleContext(LoopStatementContext.self, 0)
			}
			open
			func branchStatement() -> BranchStatementContext? {
				return getRuleContext(BranchStatementContext.self, 0)
			}
			open
			func returnStatement() -> ReturnStatementContext? {
				return getRuleContext(ReturnStatementContext.self, 0)
			}
			open
			func expression() -> ExpressionContext? {
				return getRuleContext(ExpressionContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return CwiftParser.RULE_statement
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.enterStatement(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.exitStatement(self)
			}
		}
	}
	@discardableResult
	 open func statement() throws -> StatementContext {
		var _localctx: StatementContext = StatementContext(_ctx, getState())
		try enterRule(_localctx, 2, CwiftParser.RULE_statement)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(116)
		 	try _errHandler.sync(self)
		 	switch (CwiftParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .T__1:fallthrough
		 	case .Variable:fallthrough
		 	case .Constant:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(111)
		 		try declaration()

		 		break

		 	case .While:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(112)
		 		try loopStatement()

		 		break

		 	case .If:
		 		try enterOuterAlt(_localctx, 3)
		 		setState(113)
		 		try branchStatement()

		 		break

		 	case .T__0:
		 		try enterOuterAlt(_localctx, 4)
		 		setState(114)
		 		try returnStatement()

		 		break
		 	case .True:fallthrough
		 	case .False:fallthrough
		 	case .Nil:fallthrough
		 	case .IntegerLiteral:fallthrough
		 	case .LeftParen:fallthrough
		 	case .DoubleLiteral:fallthrough
		 	case .Identifier:
		 		try enterOuterAlt(_localctx, 5)
		 		setState(115)
		 		try expression()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ReturnStatementContext: ParserRuleContext {
			open
			func expression() -> ExpressionContext? {
				return getRuleContext(ExpressionContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return CwiftParser.RULE_returnStatement
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.enterReturnStatement(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.exitReturnStatement(self)
			}
		}
	}
	@discardableResult
	 open func returnStatement() throws -> ReturnStatementContext {
		var _localctx: ReturnStatementContext = ReturnStatementContext(_ctx, getState())
		try enterRule(_localctx, 4, CwiftParser.RULE_returnStatement)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(118)
		 	try match(CwiftParser.Tokens.T__0.rawValue)
		 	setState(119)
		 	try expression()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class BranchStatementContext: ParserRuleContext {
			open
			func ifStatement() -> IfStatementContext? {
				return getRuleContext(IfStatementContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return CwiftParser.RULE_branchStatement
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.enterBranchStatement(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.exitBranchStatement(self)
			}
		}
	}
	@discardableResult
	 open func branchStatement() throws -> BranchStatementContext {
		var _localctx: BranchStatementContext = BranchStatementContext(_ctx, getState())
		try enterRule(_localctx, 6, CwiftParser.RULE_branchStatement)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(121)
		 	try ifStatement()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class IfStatementContext: ParserRuleContext {
			open
			func ifExpression() -> IfExpressionContext? {
				return getRuleContext(IfExpressionContext.self, 0)
			}
			open
			func elseIfExpression() -> [ElseIfExpressionContext] {
				return getRuleContexts(ElseIfExpressionContext.self)
			}
			open
			func elseIfExpression(_ i: Int) -> ElseIfExpressionContext? {
				return getRuleContext(ElseIfExpressionContext.self, i)
			}
			open
			func elseExpression() -> ElseExpressionContext? {
				return getRuleContext(ElseExpressionContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return CwiftParser.RULE_ifStatement
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.enterIfStatement(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.exitIfStatement(self)
			}
		}
	}
	@discardableResult
	 open func ifStatement() throws -> IfStatementContext {
		var _localctx: IfStatementContext = IfStatementContext(_ctx, getState())
		try enterRule(_localctx, 8, CwiftParser.RULE_ifStatement)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
			var _alt:Int
		 	try enterOuterAlt(_localctx, 1)
		 	setState(123)
		 	try ifExpression()
		 	setState(127)
		 	try _errHandler.sync(self)
		 	_alt = try getInterpreter().adaptivePredict(_input,2,_ctx)
		 	while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
		 		if ( _alt==1 ) {
		 			setState(124)
		 			try elseIfExpression()

		 	 
		 		}
		 		setState(129)
		 		try _errHandler.sync(self)
		 		_alt = try getInterpreter().adaptivePredict(_input,2,_ctx)
		 	}
		 	setState(131)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == CwiftParser.Tokens.Else.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(130)
		 		try elseExpression()

		 	}


		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class IfExpressionContext: ParserRuleContext {
			open
			func If() -> TerminalNode? {
				return getToken(CwiftParser.Tokens.If.rawValue, 0)
			}
			open
			func expression() -> ExpressionContext? {
				return getRuleContext(ExpressionContext.self, 0)
			}
			open
			func codeBlock() -> CodeBlockContext? {
				return getRuleContext(CodeBlockContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return CwiftParser.RULE_ifExpression
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.enterIfExpression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.exitIfExpression(self)
			}
		}
	}
	@discardableResult
	 open func ifExpression() throws -> IfExpressionContext {
		var _localctx: IfExpressionContext = IfExpressionContext(_ctx, getState())
		try enterRule(_localctx, 10, CwiftParser.RULE_ifExpression)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(133)
		 	try match(CwiftParser.Tokens.If.rawValue)
		 	setState(134)
		 	try expression()
		 	setState(135)
		 	try codeBlock()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ElseIfExpressionContext: ParserRuleContext {
			open
			func Else() -> TerminalNode? {
				return getToken(CwiftParser.Tokens.Else.rawValue, 0)
			}
			open
			func ifExpression() -> IfExpressionContext? {
				return getRuleContext(IfExpressionContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return CwiftParser.RULE_elseIfExpression
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.enterElseIfExpression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.exitElseIfExpression(self)
			}
		}
	}
	@discardableResult
	 open func elseIfExpression() throws -> ElseIfExpressionContext {
		var _localctx: ElseIfExpressionContext = ElseIfExpressionContext(_ctx, getState())
		try enterRule(_localctx, 12, CwiftParser.RULE_elseIfExpression)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(137)
		 	try match(CwiftParser.Tokens.Else.rawValue)
		 	setState(138)
		 	try ifExpression()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ElseExpressionContext: ParserRuleContext {
			open
			func Else() -> TerminalNode? {
				return getToken(CwiftParser.Tokens.Else.rawValue, 0)
			}
			open
			func codeBlock() -> CodeBlockContext? {
				return getRuleContext(CodeBlockContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return CwiftParser.RULE_elseExpression
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.enterElseExpression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.exitElseExpression(self)
			}
		}
	}
	@discardableResult
	 open func elseExpression() throws -> ElseExpressionContext {
		var _localctx: ElseExpressionContext = ElseExpressionContext(_ctx, getState())
		try enterRule(_localctx, 14, CwiftParser.RULE_elseExpression)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(140)
		 	try match(CwiftParser.Tokens.Else.rawValue)
		 	setState(141)
		 	try codeBlock()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class LoopStatementContext: ParserRuleContext {
			open
			func While() -> TerminalNode? {
				return getToken(CwiftParser.Tokens.While.rawValue, 0)
			}
			open
			func expression() -> ExpressionContext? {
				return getRuleContext(ExpressionContext.self, 0)
			}
			open
			func codeBlock() -> CodeBlockContext? {
				return getRuleContext(CodeBlockContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return CwiftParser.RULE_loopStatement
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.enterLoopStatement(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.exitLoopStatement(self)
			}
		}
	}
	@discardableResult
	 open func loopStatement() throws -> LoopStatementContext {
		var _localctx: LoopStatementContext = LoopStatementContext(_ctx, getState())
		try enterRule(_localctx, 16, CwiftParser.RULE_loopStatement)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(143)
		 	try match(CwiftParser.Tokens.While.rawValue)
		 	setState(144)
		 	try expression()
		 	setState(145)
		 	try codeBlock()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class CodeBlockContext: ParserRuleContext {
			open
			func LeftBrace() -> TerminalNode? {
				return getToken(CwiftParser.Tokens.LeftBrace.rawValue, 0)
			}
			open
			func RightBrace() -> TerminalNode? {
				return getToken(CwiftParser.Tokens.RightBrace.rawValue, 0)
			}
			open
			func statements() -> StatementsContext? {
				return getRuleContext(StatementsContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return CwiftParser.RULE_codeBlock
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.enterCodeBlock(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.exitCodeBlock(self)
			}
		}
	}
	@discardableResult
	 open func codeBlock() throws -> CodeBlockContext {
		var _localctx: CodeBlockContext = CodeBlockContext(_ctx, getState())
		try enterRule(_localctx, 18, CwiftParser.RULE_codeBlock)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(147)
		 	try match(CwiftParser.Tokens.LeftBrace.rawValue)
		 	setState(149)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = {  () -> Bool in
		 	   let testArray: [Int] = [_la, CwiftParser.Tokens.T__0.rawValue,CwiftParser.Tokens.T__1.rawValue,CwiftParser.Tokens.True.rawValue,CwiftParser.Tokens.False.rawValue,CwiftParser.Tokens.Variable.rawValue,CwiftParser.Tokens.Constant.rawValue,CwiftParser.Tokens.Nil.rawValue,CwiftParser.Tokens.IntegerLiteral.rawValue,CwiftParser.Tokens.If.rawValue,CwiftParser.Tokens.While.rawValue,CwiftParser.Tokens.LeftParen.rawValue,CwiftParser.Tokens.DoubleLiteral.rawValue,CwiftParser.Tokens.Identifier.rawValue]
		 	    return  Utils.testBitLeftShiftArray(testArray, 0)
		 	}()
		 	      return testSet
		 	 }()) {
		 		setState(148)
		 		try statements()

		 	}

		 	setState(151)
		 	try match(CwiftParser.Tokens.RightBrace.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ExpressionContext: ParserRuleContext {
			open
			func assignmentExpression() -> AssignmentExpressionContext? {
				return getRuleContext(AssignmentExpressionContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return CwiftParser.RULE_expression
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.enterExpression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.exitExpression(self)
			}
		}
	}
	@discardableResult
	 open func expression() throws -> ExpressionContext {
		var _localctx: ExpressionContext = ExpressionContext(_ctx, getState())
		try enterRule(_localctx, 20, CwiftParser.RULE_expression)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(153)
		 	try assignmentExpression()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class AssignmentExpressionContext: ParserRuleContext {
			open
			func conditionalExpression() -> ConditionalExpressionContext? {
				return getRuleContext(ConditionalExpressionContext.self, 0)
			}
			open
			func unaryExpression() -> UnaryExpressionContext? {
				return getRuleContext(UnaryExpressionContext.self, 0)
			}
			open
			func Assign() -> TerminalNode? {
				return getToken(CwiftParser.Tokens.Assign.rawValue, 0)
			}
			open
			func assignmentExpression() -> AssignmentExpressionContext? {
				return getRuleContext(AssignmentExpressionContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return CwiftParser.RULE_assignmentExpression
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.enterAssignmentExpression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? CwiftListener {
				listener.exitAssignmentExpression(self)
			}
		}
	}
	@discardableResult
	 open func assignmentExpression() throws -> AssignmentExpressionContext {
		var _localctx: AssignmentExpressionContext = AssignmentExpressionContext(_ctx, getState())
		try enterRule(_localctx, 22, CwiftParser.RULE_assignmentExpression)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(160)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,5, _ctx)) {
		 	case 1:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(155)
		 		try conditionalExpression()

		 		break
		 	case 2:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(156)
		 		try unaryExpression()
		 		setState(157)
		 		try match(CwiftParser.Tokens.Assign.rawValue)
		 		setState(158)
		 		try assignmentExpression()

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
